# low-level-design

./: Makefile  README.md  pyproject.toml
src/designs/exp_cache/: _demo.py  cache.py
src/designs/load_balancer/: _demo.py  balancer.py
src/designs/lru_cache/: _demo.py  cache.py
src/designs/money_transfer/: _demo.py  transfer.py  transfer_opt.sql  transfer_pess.sql  transfer_serialize.sql
src/designs/sms_provider/: _demo.py
src/designs/sms_provider/providers/: __init__.py  base.py  primary.py  secondary.py
src/designs/url_shortener/: _demo.py  base62.py  tiny_url.py
src/factory_method/: _demo.py  stores.py
src/lru_cache/: _demo.py
src/lrucache/: _demo.py
src/patterns/adapter/: _demo.py  logger.py
src/patterns/builder/: _demo.py  meal.py  menu.py  type.py
src/patterns/decorator/: _demo.py  beverage.py  toppings.py
src/patterns/facade/: _demo.py  smart_home.py
src/patterns/factory_method/: _demo.py  burger.py  stores.py
src/patterns/observer/: _demo.py  store.py
src/patterns/prototype/: _demo.py  docs.py
src/patterns/singleton/: _demo.py  printer_service.py
src/patterns/state/: _demo.py  traffic.py
src/patterns/strategy/: _demo.py  doors.py  params.py
tests/designs/exp_cache/: test_exp_cache.py
tests/designs/url_shortener/: test_tiny_url.py
